[gd_scene load_steps=87 format=2]

[ext_resource path="res://second platformer character controller/GoodPlayer.gd" type="Script" id=1]
[ext_resource path="res://assets/icon.png" type="Texture" id=2]
[ext_resource path="res://second platformer character controller/killua sprite_sheet.png" type="Texture" id=3]
[ext_resource path="res://second platformer character controller/lightning.png" type="Texture" id=4]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 465, 81, 93, 81 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 372, 162, 93, 81 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 558, 162, 93, 81 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 744, 162, 93, 81 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 3 )
region = Rect2( 837, 162, 93, 81 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 3 )
region = Rect2( 0, 243, 93, 81 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 3 )
region = Rect2( 558, 162, 93, 81 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 93, 81 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 3 )
region = Rect2( 93, 0, 93, 81 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 3 )
region = Rect2( 186, 0, 93, 81 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 3 )
region = Rect2( 279, 0, 93, 81 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 3 )
region = Rect2( 558, 1539, 93, 81 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 3 )
region = Rect2( 465, 1539, 93, 81 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 3 )
region = Rect2( 372, 1539, 93, 81 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 3 )
region = Rect2( 279, 1539, 93, 81 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 3 )
region = Rect2( 186, 1539, 93, 81 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 3 )
region = Rect2( 93, 1539, 93, 81 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 3 )
region = Rect2( 0, 1539, 93, 81 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 3 )
region = Rect2( 0, 891, 93, 81 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 3 )
region = Rect2( 837, 810, 93, 81 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 3 )
region = Rect2( 0, 1377, 93, 81 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 3 )
region = Rect2( 372, 0, 93, 81 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 3 )
region = Rect2( 465, 0, 93, 81 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 3 )
region = Rect2( 558, 0, 93, 81 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 3 )
region = Rect2( 651, 0, 93, 81 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 3 )
region = Rect2( 744, 0, 93, 81 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 3 )
region = Rect2( 837, 0, 93, 81 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 3 )
region = Rect2( 0, 81, 93, 81 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 3 )
region = Rect2( 93, 81, 93, 81 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 3 )
region = Rect2( 465, 162, 93, 81 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 3 )
region = Rect2( 279, 1458, 93, 81 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 3 )
region = Rect2( 372, 1458, 93, 81 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 3 )
region = Rect2( 465, 1458, 93, 81 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 3 )
region = Rect2( 279, 1134, 93, 81 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 3 )
region = Rect2( 372, 1134, 93, 81 )

[sub_resource type="AtlasTexture" id=36]
atlas = ExtResource( 3 )
region = Rect2( 465, 1134, 93, 81 )

[sub_resource type="AtlasTexture" id=37]
atlas = ExtResource( 3 )
region = Rect2( 558, 1134, 93, 81 )

[sub_resource type="AtlasTexture" id=38]
atlas = ExtResource( 3 )
region = Rect2( 744, 1134, 93, 81 )

[sub_resource type="AtlasTexture" id=39]
atlas = ExtResource( 3 )
region = Rect2( 651, 1134, 93, 81 )

[sub_resource type="AtlasTexture" id=40]
atlas = ExtResource( 3 )
region = Rect2( 837, 1134, 93, 81 )

[sub_resource type="AtlasTexture" id=41]
atlas = ExtResource( 3 )
region = Rect2( 0, 1215, 93, 81 )

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 3 )
region = Rect2( 558, 81, 93, 81 )

[sub_resource type="AtlasTexture" id=43]
atlas = ExtResource( 3 )
region = Rect2( 558, 405, 93, 81 )

[sub_resource type="AtlasTexture" id=44]
atlas = ExtResource( 3 )
region = Rect2( 651, 405, 93, 81 )

[sub_resource type="AtlasTexture" id=45]
atlas = ExtResource( 3 )
region = Rect2( 372, 81, 93, 81 )

[sub_resource type="AtlasTexture" id=46]
atlas = ExtResource( 3 )
region = Rect2( 0, 1620, 93, 81 )

[sub_resource type="AtlasTexture" id=47]
atlas = ExtResource( 3 )
region = Rect2( 93, 1620, 93, 81 )

[sub_resource type="AtlasTexture" id=48]
atlas = ExtResource( 3 )
region = Rect2( 186, 1620, 93, 81 )

[sub_resource type="AtlasTexture" id=49]
atlas = ExtResource( 3 )
region = Rect2( 279, 1620, 93, 81 )

[sub_resource type="AtlasTexture" id=50]
atlas = ExtResource( 3 )
region = Rect2( 372, 1620, 93, 81 )

[sub_resource type="AtlasTexture" id=51]
atlas = ExtResource( 3 )
region = Rect2( 558, 1620, 93, 81 )

[sub_resource type="AtlasTexture" id=52]
atlas = ExtResource( 3 )
region = Rect2( 651, 1620, 93, 81 )

[sub_resource type="AtlasTexture" id=53]
atlas = ExtResource( 3 )
region = Rect2( 93, 162, 93, 81 )

[sub_resource type="AtlasTexture" id=54]
atlas = ExtResource( 3 )
region = Rect2( 465, 405, 93, 81 )

[sub_resource type="AtlasTexture" id=55]
atlas = ExtResource( 3 )
region = Rect2( 372, 405, 93, 81 )

[sub_resource type="AtlasTexture" id=56]
atlas = ExtResource( 3 )
region = Rect2( 465, 405, 93, 81 )

[sub_resource type="AtlasTexture" id=57]
atlas = ExtResource( 3 )
region = Rect2( 465, 1458, 93, 81 )

[sub_resource type="AtlasTexture" id=58]
atlas = ExtResource( 3 )
region = Rect2( 558, 1458, 93, 81 )

[sub_resource type="AtlasTexture" id=59]
atlas = ExtResource( 3 )
region = Rect2( 651, 1458, 93, 81 )

[sub_resource type="AtlasTexture" id=60]
atlas = ExtResource( 3 )
region = Rect2( 186, 162, 93, 81 )

[sub_resource type="AtlasTexture" id=61]
atlas = ExtResource( 3 )
region = Rect2( 0, 1539, 93, 81 )

[sub_resource type="AtlasTexture" id=62]
atlas = ExtResource( 3 )
region = Rect2( 93, 1539, 93, 81 )

[sub_resource type="AtlasTexture" id=63]
atlas = ExtResource( 3 )
region = Rect2( 186, 1539, 93, 81 )

[sub_resource type="AtlasTexture" id=64]
atlas = ExtResource( 3 )
region = Rect2( 279, 1539, 93, 81 )

[sub_resource type="AtlasTexture" id=65]
atlas = ExtResource( 3 )
region = Rect2( 372, 1539, 93, 81 )

[sub_resource type="AtlasTexture" id=66]
atlas = ExtResource( 3 )
region = Rect2( 465, 1539, 93, 81 )

[sub_resource type="AtlasTexture" id=67]
atlas = ExtResource( 3 )
region = Rect2( 558, 1539, 93, 81 )

[sub_resource type="AtlasTexture" id=68]
atlas = ExtResource( 3 )
region = Rect2( 93, 648, 93, 81 )

[sub_resource type="AtlasTexture" id=69]
atlas = ExtResource( 3 )
region = Rect2( 186, 648, 93, 81 )

[sub_resource type="SpriteFrames" id=70]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "stun_block_loop",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": false,
"name": "dead",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ) ],
"loop": true,
"name": "stun_hit_loop",
"speed": 5.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 10 ), SubResource( 9 ) ],
"loop": true,
"name": "standing",
"speed": 5.0
}, {
"frames": [ SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "walk_rev",
"speed": 7.0
}, {
"frames": [ SubResource( 19 ), SubResource( 20 ), SubResource( 21 ) ],
"loop": true,
"name": "back_dash",
"speed": 12.0
}, {
"frames": [ SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ) ],
"loop": true,
"name": "run",
"speed": 12.0
}, {
"frames": [ SubResource( 30 ) ],
"loop": true,
"name": "stun_hit_end",
"speed": 7.0
}, {
"frames": [ SubResource( 31 ), SubResource( 31 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ) ],
"loop": true,
"name": "parry_red_counter",
"speed": 10.0
}, {
"frames": [ SubResource( 34 ), SubResource( 35 ), SubResource( 35 ), SubResource( 36 ), SubResource( 36 ), SubResource( 36 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ) ],
"loop": true,
"name": "slow_attack",
"speed": 15.0
}, {
"frames": [ SubResource( 42 ), SubResource( 42 ), SubResource( 42 ) ],
"loop": true,
"name": "parry_red",
"speed": 10.0
}, {
"frames": [ SubResource( 43 ), SubResource( 43 ), SubResource( 44 ) ],
"loop": true,
"name": "parry_blue",
"speed": 10.0
}, {
"frames": [ SubResource( 45 ) ],
"loop": true,
"name": "stun_block_end",
"speed": 5.0
}, {
"frames": [ SubResource( 46 ), SubResource( 47 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 48 ), SubResource( 49 ), SubResource( 48 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 52 ) ],
"loop": true,
"name": "parry_blue_counter",
"speed": 15.0
}, {
"frames": [ SubResource( 53 ) ],
"loop": true,
"name": "crouch_start",
"speed": 22.0
}, {
"frames": [ SubResource( 54 ), SubResource( 55 ), SubResource( 55 ), SubResource( 55 ), SubResource( 54 ) ],
"loop": true,
"name": "parry_blue_fail",
"speed": 5.0
}, {
"frames": [ SubResource( 56 ), SubResource( 57 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 58 ), SubResource( 59 ), SubResource( 57 ), SubResource( 57 ) ],
"loop": true,
"name": "parry_red_fail",
"speed": 7.0
}, {
"frames": [ SubResource( 60 ) ],
"loop": true,
"name": "crouch_loop",
"speed": 5.0
}, {
"frames": [ SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ) ],
"loop": true,
"name": "walk",
"speed": 7.0
}, {
"frames": [ SubResource( 68 ), SubResource( 69 ), SubResource( 69 ), SubResource( 68 ), SubResource( 68 ), SubResource( 68 ), SubResource( 68 ) ],
"loop": true,
"name": "quick_attack",
"speed": 20.0
} ]

[sub_resource type="AtlasTexture" id=71]
atlas = ExtResource( 4 )
region = Rect2( 796, 0, 199, 192 )

[sub_resource type="AtlasTexture" id=72]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 199, 192 )

[sub_resource type="AtlasTexture" id=73]
atlas = ExtResource( 4 )
region = Rect2( 199, 0, 199, 192 )

[sub_resource type="AtlasTexture" id=74]
atlas = ExtResource( 4 )
region = Rect2( 398, 0, 199, 192 )

[sub_resource type="AtlasTexture" id=75]
atlas = ExtResource( 4 )
region = Rect2( 597, 0, 199, 192 )

[sub_resource type="AtlasTexture" id=76]
atlas = ExtResource( 4 )
region = Rect2( 597, 192, 199, 192 )

[sub_resource type="AtlasTexture" id=77]
atlas = ExtResource( 4 )
region = Rect2( 796, 192, 199, 192 )

[sub_resource type="SpriteFrames" id=78]
animations = [ {
"frames": [ SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 73 ), SubResource( 75 ), SubResource( 73 ), SubResource( 75 ), SubResource( 75 ), SubResource( 74 ), SubResource( 76 ), SubResource( 77 ), null ],
"loop": false,
"name": "lightning",
"speed": 20.0
} ]

[sub_resource type="RectangleShape2D" id=79]
extents = Vector2( 19.4589, 39.938 )

[sub_resource type="RectangleShape2D" id=80]
extents = Vector2( 38.7699, 22.9242 )

[sub_resource type="RectangleShape2D" id=81]
extents = Vector2( 91.3618, 35.2651 )

[sub_resource type="RectangleShape2D" id=82]
extents = Vector2( 79.0729, 44.8938 )

[node name="GoodPlayer" type="KinematicBody2D"]
pause_mode = 1
scale = Vector2( -1, 1 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
light_mask = 3
position = Vector2( 0.945313, -25.1066 )
scale = Vector2( 2, 2 )
frames = SubResource( 70 )
animation = "standing"
playing = true
offset = Vector2( 9.71977, 0.730942 )

[node name="Lightning" type="AnimatedSprite" parent="."]
position = Vector2( 89.935, -220.387 )
rotation = 1.28213
scale = Vector2( 3, 3 )
z_index = 8
frames = SubResource( 78 )
animation = "lightning"
frame = 12
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -3.70633, -7.48217 )
shape = SubResource( 79 )

[node name="State" type="Label" parent="."]
visible = false
margin_left = -17.797
margin_top = -97.4966
margin_right = 22.203
margin_bottom = -83.4966
__meta__ = {
"_edit_use_anchors_": false
}

[node name="quick_attack" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="quick_attack"]
visible = false
position = Vector2( 17.0234, -10.7648 )
shape = SubResource( 80 )

[node name="slow_attack" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="slow_attack"]
visible = false
position = Vector2( 27.1695, -24.9054 )
shape = SubResource( 81 )

[node name="lightning" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="lightning"]
position = Vector2( 90.3063, -14.667 )
shape = SubResource( 82 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 15.4715, -17.7356 )
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite" to="." method="_on_AnimatedSprite_frame_changed"]
[connection signal="body_entered" from="quick_attack" to="." method="_on_quick_attack_body_entered"]
[connection signal="body_exited" from="quick_attack" to="." method="_on_quick_attack_body_exited"]
[connection signal="body_entered" from="slow_attack" to="." method="_on_slow_attack_body_entered"]
[connection signal="body_exited" from="slow_attack" to="." method="_on_slow_attack_body_exited"]
[connection signal="body_entered" from="lightning" to="." method="_on_lightning_body_entered"]
[connection signal="body_exited" from="lightning" to="." method="_on_lightning_body_exited"]
